# agentic-rechner-pipeline

./: .env.example  .gitignore  AGENTS.md  MIGRATION.md  ONBOARDING.md  PROJECT-LEAD.md  README.md  STATE.md  pyproject.toml  qa_contract.example.json  qa_contract.json  requirements-dev.txt  requirements.txt
.claude/skills/author-rechner-toolbox-gate/: SKILL.md
.claude/skills/build-vergleichsrechenkern/: SKILL.md  per-cli-notes.md
demo_fixtures/: 01_iteration.txt  02_iteration.txt  03_iteration.txt  README.md
dev/: CR-001-llm-provider-subscription-auth.md  CR-002-fixed-golden-master-harness.md  CR-003-ci-matrix.md  CR-004-containerized-run.md  CR-005-model-escalation.md  README.md  SESSION-2026-05-29.md
examples/: README.md
examples/dora_outputs/example_FLV/: todo_result_102.md
prompts/v1/: excel_to_py.txt
replaced-prompts-original-to-ignore/v1/: excel_to_py.txt
src/rechner_pipeline/: __init__.py  cli.py
src/rechner_pipeline/adapters/: base.py  excel.py
src/rechner_pipeline/extract/: excel.py  openpyxl_backend.py
tests/: test_agent_workflow_docs.py  test_agentic_diagnostics.py  test_algebraic.py  test_cli.py  test_client_env.py  test_common.py  test_conventions.py  test_dossier.py  test_extract.py  test_fs_confine.py  test_generate_output.py  test_golden_master.py  test_golden_master_com.py  test_ledger_wiring.py  test_openpyxl_backend.py  test_provider_selection.py  test_roundtrip.py  test_run_dossier.py  test_runner_compare.py  test_schemas.py  test_security.py  test_static_security.py  test_validate.py
tools/: demo_log.py
(+42 files in other folders)
