[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rechner-pipeline"
version = "0.1.0"
description = "Full-agentic, CLI-driven Excel-to-Python actuarial migration pipeline (foundation layer)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Bartlomiej Maciaga" },
    { name = "Arno Rasch" },
    { name = "Albrecht Brehm"},
]

# Runtime dependencies. Pinned to exact versions actually installed from public pypi.org.
dependencies = [
    "openpyxl==3.1.5",
    "oletools==0.60.2",
    "pandas==2.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "hypothesis==6.155.5",
]

[project.scripts]
rechner-pipeline = "rechner_pipeline.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
